# sistema-anemia

./: .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
.atl/: .skill-registry.cache.json  skill-registry.md
e2e/: auth-flow.spec.ts  dashboard.spec.ts  helpers.ts  login.spec.ts  navigation.spec.ts
playwright-report/: index.html
prd/: prd-parte-01.txt  prd-parte-02.txt  prd-parte-03.txt  prd-parte-04.txt  prd-parte-05.txt  prd-parte-06.txt  prd-parte-07.txt  prd-parte-08.txt
sdd/auth-module/: exploration.md
sdd/patients-module/: exploration.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_roles.sql  002_create_users.sql  003_create_patients.sql  004_create_centros_poblados.sql  005_create_controles.sql  006_create_medicamentos.sql  007_create_tratamientos.sql  008_create_visitas_domiciliarias.sql  009_create_alertas.sql  010_create_audit_log.sql  011_create_backup_history.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/commands/: alertas.rs  auth.rs  backups.rs  centros_poblados.rs  controls.rs  dashboard.rs  medicamentos.rs  mod.rs  patients.rs  reports.rs  treatments.rs  users.rs  visitas.rs
src-tauri/src/database/: mod.rs
src-tauri/src/dto/: mod.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/repositories/: centro_poblado_repository.rs  control_repository.rs  mod.rs  patient_repository.rs  treatment_repository.rs  user_repository.rs
src-tauri/src/security/: mod.rs
src-tauri/src/services/: alerta_generator.rs  auth_service.rs  backup_service.rs  centro_poblado_service.rs  control_service.rs  mod.rs  patient_service.rs  report_service.rs  treatment_service.rs
src/app/: router.tsx
src/hooks/: useControls.ts  usePatients.ts  useTreatments.ts
src/services/: alertaService.ts  authService.ts  backupService.ts  controlService.ts  dashboardService.ts  (+4 more)
(+60 files in other folders)
