[package]
name = "sistema-anemia"
version = "0.1.0"
edition = "2021"

[lib]
name = "sistema_anemia_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
sha2 = "0.10"
regex = "1"
async-trait = "0.1"
rand_core = { version = "0.6", features = ["getrandom"] }
printpdf = "0.7"
rust_xlsxwriter = "0.78"
csv = "1.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
